z-index fixed

--- a/css/event-reg.css
+++ b/css/event-reg.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: flex-start;
     align-content: stretch;
-    margin: 2rem 0 0 1rem;
+    margin-bottom: 14rem;
 }
 .event-reg-img{
     display: flex;
